Movie-Picture-Pipeline/starter/backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-node-port-service
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
